tests/negative/gold/incomplete_string8_test.gold
tests/negative/incomplete_string8_test.toit:6:3: error: Unterminated string
  """""
  ^
Compilation failed.
